Ignore some cases in TestPathTraversalAccess with tc